fix: Overflow X on Project Card Mobile

--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -215,13 +215,16 @@ p, ul {
 #projects-card {
   flex-direction: column;
   align-items: center;
+  padding: 0;
+  box-sizing: border-box;
 }
+
 .project-container {
   display: grid;
-  margin: 0 2em;
   grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
   gap: 15px;
-  padding: 15px;
+  padding: clamp(5px, 2vw, 2rem);
+  box-sizing: border-box;
 }
 
 .project-box {
@@ -275,7 +278,6 @@ p, ul {
   font-size: 0.9em;
   border-radius: 10px;
   padding: 20px;
-  overflow-y: scroll;
   box-shadow: 5px 5px 5px 3px rgba(1,1,1,0.3);
   box-sizing: border-box;
   z-index: 2;
@@ -289,7 +291,9 @@ p, ul {
 .project-card.project-modal {
   position: relative;
   max-width: 550px;
-  max-width: min(550px, 80%);
+  max-width: min(550px, 85%);
+  overflow-y: scroll;
+  max-height: 93%;
   z-index: 4
 }
 
